--- a/README.adoc
+++ b/README.adoc
@@ -1,43 +1,11 @@
 # TP MIAGE conception logicielle
 
-## Nom du(des) étudiant(e)(s) de ce monôme/binôme 
+## Nom du(des) étudiant(e)(s) de ce monôme/binôme
 WARNING: NE PAS OUBLIER DE MENTIONNER LES DEUX NOMS SI VOUS ETES EN BINOME!
 
-#XXX# (et #YYY#)
+#SOLER# et #MOUEZANT#
 
-Commentaires éventuels des étudiants : #XXXXXX#
-
-## Pré-requis 
-
-* Disposer d'**une machine dotée d'au moins 8 Gio** de RAM avec 20 Gio de disque disponible ; **Un PC par binôme suffit**, choisir le plus puissant (avec le plus de RAM).
-* Disposer d'une **connexion internet hors université** pendant le TP (le réseau de l'université semble bloquer un certain nombre de choses). En cas d'urgence, je peux fournir de la data en 5G.
-* Disposer d'**un compte Github par personne** et avoir https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token[créé un access token] avec le groupe de droits `repo`, le faire depuis https://github.com/settings/tokens[ici];
-* Avoir téléchargé et testé la VM (voir plus bas) ou disposer de tous les outils AVANT le TP.
-
-WARNING: VirtualBox semble mal fonctionner (très lent) sur OSX. Si vous êtes sur un Mac, bien tester avant le TP. Il est illusoir de penser avoir le temps d'installer et configurer les outils pendant le TP.
-
-## Environnement de développement
-
-Deux options sont possibles :
-
-### Option 1 (fortement recommandée) - Utiliser la VM fournie
-
-Télécharger, décompresser et *tester* cette https://public.florat.net/cours_miage/vm-tp-miage.ova[image VirtualBox] *avant le TP*. Elle contient tous les outils nécessaires (Intellij IDEA, DBeaver, client REST Bruno, Firefox...).
-
-**Le login/mot de passe est : `vagrant`/`vagrant`.**
-
-NOTE: Cette VM est issue de ce https://github.com/bflorat/vm-dev[projet open source].
-
-IMPORTANT: Si pas déjà fait, activer les fonctions de virtualisation CPU dans votre BIOS/UEFI (option `AMD-V` ou `Intel VT` en général).
-
-### Option 2 - Installer les outils soit même sur votre machine
-
-* Disposer d’un IDE (de préférence Intellij IDEA CE, Eclipse ou VSCode) et un JDK 17+.
-* Disposer d’une installation de Docker.
-* Disposer d’un client de test REST (Bruno, Insomnia ou Postman conseillés).
-* Disposer d’un explorer de base de donnée (DBeaver conseillé).
-
-WARNING: Si vous choissiez cette option, vous êtes en autonomie sur l'installation et la configuration des outils.
+Commentaires éventuels des étudiants : #Access token : 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#
 
 ## Déroulement du TP
 
@@ -57,10 +25,14 @@ TIP: [Rappel Git] Trois dépôts sont ici utilisés : le dépot Github de l'ense
 * Observer le code du projet `todolist-debut-ex1`
 
 *Le code est-il structuré en couches ? Quel problèmes ce code peut-il poser ?*
+Le code est structuré en trois couches différentes : base de données, code,  métier.
+Le problème est que l’application est dépendente de la technologie utilisée.
 
 *Où se trouve le code métier (voir la règle de gestion RG 1) ?*
+Le code métier ce situe dans le dossier src/main/java/com/acmetodolist plus précisément dans le fichier TodoListController
 
 *Cette règle est-elle facilement testable par un test unitaire ?*
+La règle n’est pas facilement testable car elle est privé.
 
 * Lancer une base PostgreSQL en Docker dans un terminal (on lance ici la base en mode interactif pour visualiser son activité. Pour la lancer en tâche de fond, remplacer les options `it` par `d` comme 'daemon'):
 ```bash
@@ -68,9 +40,18 @@ docker run -it -e POSTGRES_PASSWORD=password -p 5432:5432 postgres
 ```
 *Expliquer cette ligne de commande (y compris les options utilisées)*
 
+docker run: lance un contener pour postgres on l’initialise avec le mot de passe POSTGRES_PASSWORD=password
+
+-it lance le contener en mode interaction
+
+-e représente la variable d’environement pour le contener
+
+-p publie le contener
+
 * Compléter le code manquant dans la méthode `TodoListController.createTodoItem()`
 
 *Pourquoi `todoItemRepository` est-il `null` ? Quelle est la meilleure façon de l'injecter ?*
+Le repository n’est pas initialiser. La meilleur façon de l’injecter est de le faire de façons automatique avec @Inject ou @Autowired
 
 * Modifier le code en conséquence.
 
@@ -79,8 +60,8 @@ docker run -it -e POSTGRES_PASSWORD=password -p 5432:5432 postgres
 
 [NOTE]
 ====
-* Les URL des endpoints sont renseignées dans le contrôleur via les annotation `@...Mapping` 
-* Exemple de body JSON : 
+* Les URL des endpoints sont renseignées dans le contrôleur via les annotation `@...Mapping`
+* Exemple de body JSON :
 
 ```json
 {
@@ -102,12 +83,12 @@ _Temps estimé : 1 h 20_
 
 * Partir du projet `todolist-debut-ex2`
 
-NOTE: Le projet a été réusiné suivant les principes de l'architecture hexagonale : 
+NOTE: Le projet a été réusiné suivant les principes de l'architecture hexagonale :
 
 image::images/archi_hexagonale.png[]
 Source : http://leanpub.com/get-your-hands-dirty-on-clean-architecture[Tom Hombergs]
 
-* Nous avons découpé le coeur en deux couches : 
+* Nous avons découpé le coeur en deux couches :
   - la couche `application` qui contient tous les contrats : ports (interfaces) et les implémentations des ports d'entrée (ou "use case") et qui servent à orchestrer les entités.
   - la couche `domain` qui contient les entités (au sens DDD, pas au sens JPA). En général des classes complexes (méthodes riches, relations entre les entités)
 
@@ -116,7 +97,7 @@ Source : http://leanpub.com/get-your-hands-dirty-on-clean-architecture[Tom Hombe
 Compléter ce code avec une fonctionnalité de création de `TodoItem`  persisté en base et appelé depuis un endpoint REST `POST /todos` qui :
 
 * prend un `TodoItem` au format JSON dans le body (voir exemple de contenu plus haut);
-* renvoie un code `201` en cas de succès. 
+* renvoie un code `201` en cas de succès.
 
 La fonctionnalité à implémenter est contractualisée par le port d'entrée `AddTodoItem`.
 
@@ -127,7 +108,7 @@ _Temps estimé : 20 mins_
 
 * Implémenter (en junit) des TU portant sur la règle de gestion qui consiste à afficher `[LATE!]` dans la description d'un item en retard de plus de 24h.
 
-*Quels types de tests devra-t-on écrire pour les adaptateurs ?* 
+*Quels types de tests devra-t-on écrire pour les adaptateurs ?*
 
 *S'il vous reste du temps, écrire quelques-uns de ces types de test.*
 
