Début Exo2 Question écrite

--- a/README.adoc
+++ b/README.adoc
@@ -93,6 +93,8 @@ Source : http://leanpub.com/get-your-hands-dirty-on-clean-architecture[Tom Hombe
   - la couche `domain` qui contient les entités (au sens DDD, pas au sens JPA). En général des classes complexes (méthodes riches, relations entre les entités)
 
 *Rappeler en quelques lignes les grands principes de l'architecture hexagonale.*
+Une architecture hexagonale permet de séparer les parties code métier des données. Si une des deux est modifiée cela n’impactera pas l'autre.
+Cela facilite la maintenance du code et la stabilité.
 
 Compléter ce code avec une fonctionnalité de création de `TodoItem`  persisté en base et appelé depuis un endpoint REST `POST /todos` qui :
 
